[package]
name = "fnconcat"
version = "0.1.0"
authors = ["Aaron Gallagher <_@habnab.it>"]
homepage = "https://github.com/habnabit/rust-fnconcat"
repository = "https://github.com/habnabit/rust-fnconcat"

description = "Specify function names by concatenating tokens."
license = "ISC"

[lib]
name = "fnconcat"
path = "src/lib.rs"
crate-type = ["dylib"]
plugin = true
